[package]
name = "eclipse-marisusis-me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.80"
axum = "0.7.4"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
toml = "0.8.10"
tower-http = { version = "0.5", features = ["timeout", "trace", "fs"] }
